--- a/App/Views/Signup/success.html
+++ b/App/Views/Signup/success.html
@@ -9,7 +9,7 @@
 			<div class="settings p-2">
 				<p>Dziękujemy za rejestrację w serwisie!</p><br />
 				<p>Na podany adres wysłano link aktywacyjny!</p>				
-				<p>Potwierdź e-mail i <a href="/login/new">zaloguj się na swoje konto!</a></p>
+				<p>Potwierdź e-mail i zaloguj się na swoje konto!</a></p>
 			</div>
 		</div>
 	</div>
