--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -50,7 +50,13 @@
 						</ol>			
 					</div>		
 				</nav>		
-			{% endif %}			
+			{% endif %}
+			
+			{% for message in flash_messages %}				
+				<div class="alert alert-{{ message.type }}">
+					{{ message.body }}
+				</div>
+			{% endfor %}
 
 			{% block body %}
 			{% endblock %}
